@@ -7,6 +7,8 @@
 	- Adjust formatting of some debug telemetry.
 - Vessel Mover:
 	- Don't apply "Don't Avoid Collisions" while lowering vessels.
+- Vessel Spawning:
+	- Re-register EVA Kerbals in spawned vessels as active, since KSP de-registers this for some reason.
 - Weapons:
 	- APS turrets now function when GuardMode is off to let them work on player-operated craft.
 	- Adds new 'dualModeAPS' field (default false) for APS turrets; if true, they can also be selected and used as standard weapons.
